--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">loudryku</string>
+    <string name="app_name">laudryku</string>
     <string name="title_activity_login">Sign in</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -35,4 +35,14 @@
     <string name="foto_laundry">Foto Laundry</string>
     <string name="belum_ada_file_dipilih">Belum Ada File dipilih</string>
     <string name="upload_foto">Upload Foto</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="profil">profil</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="delayicon">delayicon</string>
+    <string name="total_orderan">Total Orderan</string>
 </resources>
