--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="delayicon">delayicon</string>
     <string name="total_orderan">Total Orderan</string>
+    <string name="profile">Profile</string>
 </resources>
